Task 1 File Handler Utility